# vote.rs

./: .gitignore  Cargo.toml  README.md  Rocket.toml  schema.sql
.github/workflows/: rust.yml
src/: main.rs  schema.rs
templates/: base.html.tera  index.html.tera  vote.html.tera
