[package]
name = "voters"
version = "0.0.1"
publish = false

license = "MIT/Apache-2.0"

[dependencies]
rocket = "0.4.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.3", features = ["sqlite", "r2d2"] }
itertools = "0.8"
rcir = "0.3"

[dependencies.rocket_contrib]
version = "0.4.0-rc.1"
features = ["tera_templates", "diesel_sqlite_pool"]
